--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,6 +41,11 @@ li {
 display: inline;
 }
 
+.card-img-top {
+    width: 418px;
+    height: 250px;
+}
+
 footer {
     background-color: #304b62;
     border: 1px solid;
